--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+bin
+obj
+Контрольная работа.csproj
+
 # User-specific files
 *.rsuser
 *.suo
